-added news footer -fixed the glich in mobile 💹💹💹 -change background color -fixed category men on mobile device removed unnesessary file ,favicon.ico, app.css

--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -6,6 +6,10 @@
     font-family: 'Noto';
     src: url('../fonts/NotoSerif-Regular.ttf');
 }
+html {
+    scroll-behavior: smooth;
+}
+
 .post-title {
     font-family: 'Libre';
 }
@@ -34,6 +38,23 @@
 .loading-spinner {
    margin-top: 30%;
    margin-left: 49%;
+}
+.category-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.item-1 {
+ display: flex;
+ justify-content: flex-end;
+}
+.item-2 {
+display: flex;
+justify-content: flex-start;
+padding-left: 0px;
+}
+.category-item {
+    margin-left: 2rem;
 }
 .regular-container {
     margin:2% 0px
@@ -88,20 +109,29 @@
     margin-right:15px;
     margin-left:15px;
 }
-@media only screen and (max-width: 600px) {
-    .slick-slider {
-        margin: 0 -15px;
-      }
-    .slick-slide {
-        margin-right:5px;
-        margin-left:15px;
-    }
-  }
+
 .navbar-app {
       height: 2rem;
   }
   .card-header {
       background-color: #e8e8e8 !important; 
+  }
+  .footer-container {
+      width: 100%;
+      height: 6rem;
+      background-color: #323232;
+  }
+  .footer-content {
+      padding-top: 2rem;
+      margin: 0 auto;
+     text-align: center;
+      color: white;
+  }
+  @media (max-width:1540px) {
+    .item-1 {
+        display: flex;
+        justify-content: flex-end;
+       }
   }
   @media (max-width:1200px) {
     .image-header {
@@ -109,32 +139,66 @@
         width: 100%;
         height: 620px;  
     }
+    .item-1 {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 1rem;
+       }
   }
-@media (max-width: 748px) { 
+@media (max-width: 1020px) { 
     .regular-image-container {
         width: 32rem;
         height: 18rem;
         overflow: hidden;
     }
     .image-header {
-        background-color: black;
+        /* background-color: black; */
         width: 100%;
         height: 420px;  
     }
+    .source-container {
+        margin-top: -5rem;
+        /* background-color: yellow; */
+    }
+    .item-1 {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 1rem;
+       }
+    
 }
 @media (max-width: 610px) { 
+    .slick-slider {
+        margin: 0 -15px;
+      }
+    .slick-slide {
+        margin-right:5px;
+        margin-left:15px;
+    }
     .regular-image-container {
         width: 31rem;
         height: 18rem;
         overflow: hidden;
     }
     .image-header {
-        background-color: black;
+        /* background-color: black; */
         width: 100%;
         height: 420px;  
     }
+    .source-container {
+        margin-top: -5rem;
+        /* background-color: red; */
+    }
+    .item-1 {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 1rem;
+       }
 
 }
+@media only screen and (max-width: 600px) {
+   
+  }
 @media (max-width: 530px) { 
     .regular-image-container {
         width: 28rem;
@@ -142,13 +206,16 @@
         overflow: hidden;
     }
     .image-header {
-        background-color: black;
+        /* background-color: black; */
         width: 100%;
         height: 320px;  
     }
     .source-container {
         margin-top: -15rem;
-        background-color: blue;
+        /* background-color: blue; */
+        margin-left: 10px;
+        margin-right: 10px;
+
     }
     .image-header-carousel p {
         display: none;
@@ -156,4 +223,9 @@
     .image-header-carousel a {
        font-size: 1rem;
     }
+    .item-1 {
+        display: flex;
+        justify-content: flex-start;
+        margin-bottom: 1rem;
+       }
 }
